--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/netflow2Bidi/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/netflow2Bidi/flinkoperator-flinkjobcluster-netflow.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   flinkVersion: "1.14"
   image:
-    name: kubernetes:31320/netflow2bidirectional:latest 
+    name: kubernetes:5000/netflow2bidirectional-app:2.0
   jobManager:
     ports:
       ui: 8081
@@ -36,7 +36,7 @@ spec:
   job:
     jarFile: /opt/flink/usrlib/Netflow2Bidirectional-1.0.jar
     className: tid.Netflow2Bidirectional 
-    args: ["kafka-service:9092", "uni-flows", "bidi-flows"]
+    args: ["kafka:9092", "sda-uni-flows", "sda-bidi-flows"]
     parallelism: 2
     restartPolicy: Never
   flinkProperties:
