--- a/kubernetes/netflow-sda-cds-full-pipeline/values.yaml
+++ b/kubernetes/netflow-sda-cds-full-pipeline/values.yaml
@@ -47,14 +47,14 @@ consumerDCP:
   repository: kubernetes:5000/netflow-consumer-driver:4.0
   kafka: "kafka:9092"
   input_topic: "sda-netflow-aggregated"
-  output_topic: "netflow-raw"
+  output_topic: "sda-netflow-raw"
   
 CDS:
   name: crypto-detection-system
-  repository: kubernetes:5000/crypto-detector:latest
+  repository: kubernetes:5000/crypto-detector:3.0
   kafka: "kafka:9092"
-  input_topic: "netflow-raw"
-  output_topic: "netflow-anonymized-preprocessed"
+  input_topic: "netflow-anonymized-preprocessed"
+  output_topic: "netflow-crypto-prediction"
 
 flinkConf:
   memory: "2042Mi"
