Updating and tuning minor configuration things according to the SDA testbed for PALANTIR project

--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/netflowAggregator/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/netflowAggregator/flinkoperator-flinkjobcluster-netflow.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   flinkVersion: "1.14"
   image:
-    name: kubernetes:5000/netflow-aggregator-app:latest 
+    name: kubernetes:5000/netflow-aggregator-app:1.0 
   jobManager:
     ports:
       ui: 8081
