--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-DCP/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-DCP/flinkoperator-flinkjobcluster-netflow.yaml
@@ -36,7 +36,7 @@ spec:
   job:
     jarFile: /opt/flink/usrlib/Netflow2DCP-1.0.jar
     className: tid.Netflow2DCP
-    args: ["kafka:9092", "sda-netflow-aggregated", "netflow-raw"]
+    args: ["kafka:9092", "sda-netflow-aggregated", "sda-netflow-raw"]
     parallelism: 2
     restartPolicy: Never
   flinkProperties:
