--- a/kubernetes/netflow-sda-full-pipeline/Chart.yaml
+++ b/kubernetes/netflow-sda-full-pipeline/Chart.yaml
@@ -15,7 +15,7 @@
 #
 apiVersion: v2
 name: netflow-sda-full-pipeline
-description: A Helm chart to deploy a Netflow full data pipeline related to SDA within PALANTIR
+description: A Helm chart to deploy a NetFlow full data pipeline related to SDA within PALANTIR
 type: application
 version: 3.4-SNAPSHOT
 appVersion: 1.16.0
