--- a/kubernetes/netflow-sda-full-pipeline-multitenancy/values.yaml
+++ b/kubernetes/netflow-sda-full-pipeline-multitenancy/values.yaml
@@ -16,14 +16,14 @@
 
 goflow2:
   name: sda-goflow2
-  repository: kubernetes:5000/goflow2:latest
+  repository: <k8s-registry-ip>:<k8s-registry-port>/goflow2:latest
   nodePort: 32001
   kafka: "kafka:9092"
   topic: "sda-flows.7476dde9-6bb8-4bab-b45c-0128da24aefc"
 
 netflowDriver:
   name: sda-flinkjobcluster-netflow-driver
-  repository: kubernetes:5000/netflow-source-driver:latest
+  repository: <k8s-registry-ip>:<k8s-registry-port>/netflow-source-driver:latest
   kafka: "kafka:9092"
   input_topic: "sda-flows.7476dde9-6bb8-4bab-b45c-0128da24aefc"
   output_topic: "sda-uni-flows"
@@ -32,7 +32,7 @@ netflowDriver:
 
 netflow2bidirectional:
   name: sda-flinkjobcluster-netflow2bidirectional
-  repository: kubernetes:5000/netflow2bidirectional-app:latest
+  repository: <k8s-registry-ip>:<k8s-registry-port>/netflow2bidirectional-app:latest
   kafka: "kafka:9092"
   input_topic: "sda-uni-flows"
   output_topic: "sda-bidi-flows"
@@ -41,7 +41,7 @@ netflow2bidirectional:
 
 netflowAggregator:
   name: sda-flinkjobcluster-netflow-aggregator
-  repository: kubernetes:5000/netflow-aggregator-app:latest
+  repository: <k8s-registry-ip>:<k8s-registry-port>/netflow-aggregator-app:latest
   kafka: "kafka:9092"
   input_topic: "sda-bidi-flows"
   output_topic: "sda-netflow-aggregated"
@@ -50,7 +50,7 @@ netflowAggregator:
 
 consumerDCP:
   name: sda-flinkjobcluster-netflow-consumer-dcp
-  repository: kubernetes:5000/netflow-consumer-driver:latest
+  repository: <k8s-registry-ip>:<k8s-registry-port>/netflow-consumer-driver:latest
   kafka: "kafka:9092"
   input_topic: "sda-netflow-aggregated"
   output_topic: "sda-netflow-raw"
