--- a/kubernetes/netflow-sda-cds-full-pipeline-multitenancy/templates/netflow2bidirectional-flinkoperator.yaml
+++ b/kubernetes/netflow-sda-cds-full-pipeline-multitenancy/templates/netflow2bidirectional-flinkoperator.yaml
@@ -15,11 +15,11 @@
 apiVersion: flinkoperator.k8s.io/v1beta1
 kind: FlinkCluster
 metadata:
-  name: {{ .Values.netflow2bidirectional.name }}
+  name: {{ .Values.netflow2bidi.name }}
 spec:
   flinkVersion: "1.14"
   image:
-    name: {{ .Values.netflow2bidirectional.repository }}  
+    name: {{ .Values.netflow2bidi.repository }}  
   jobManager:
     ports:
       ui: 8081
@@ -28,7 +28,7 @@ spec:
   job:
     jarFile: /opt/flink/usrlib/Netflow2Bidirectional-1.0.jar
     className: tid.Netflow2Bidirectional 
-    args: [{{ .Values.netflow2bidirectional.kafka }}, {{ .Values.netflow2bidirectional.input_topic }}, {{ .Values.netflow2bidirectional.output_topic }}, {{ .Values.netflow2bidirectional.tenant_service }}, {{ .Values.netflow2bidirectional.tenant_id }}]
+    args: [{{ .Values.netflow2bidi.kafka }}, {{ .Values.netflow2bidi.input_topic }}, {{ .Values.netflow2bidi.output_topic }}, {{ .Values.netflow2bidi.tenant_service }}, {{ .Values.netflow2bidi.tenant_id }}]
     parallelism: 1
     restartPolicy: Never
   flinkProperties:
